--- a/css/services.css
+++ b/css/services.css
@@ -45,6 +45,7 @@ h2{
     justify-content: center;
     align-items: center;
     margin: 10px 10px;
+    flex-wrap: wrap;
     }
 .card h2{
     font-family: Arial, Helvetica, sans-serif;
