--- a/css/ongoing.css
+++ b/css/ongoing.css
@@ -23,6 +23,9 @@ font-family: Arial, Helvetica, sans-serif;
 font-size: smaller;
 color: #002029;
 }
+.table{
+    width:100%;
+}
 ion-icon{
 color: white;
 }
